--- a/css/menu.css
+++ b/css/menu.css
@@ -1221,6 +1221,9 @@ table tr td{
     overflow: auto;
    
 }
+.card-dashboard{
+    position: relative;
+}
 .header-card-dashboard {
     background: rgb(50, 58, 83);
     background: -moz-linear-gradient(90deg, rgba(50, 58, 83, 1) 3%, rgba(27, 44, 97, 1) 60%);
